FIX z-index for sticky header

--- a/app/assets/stylesheets/common/modal/discourse-reactions-popup.scss
+++ b/app/assets/stylesheets/common/modal/discourse-reactions-popup.scss
@@ -39,6 +39,7 @@
     position: sticky;
     top: 0;
     background: var(--secondary);
+    z-index: z("base");
   }
 
   &__header {
